grammar/GrammarParser.py
# Generated from .\Grammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'as'", "'['", "']'", "':'", 
                     "','", "'$$'", "'\"\"'", "'$'", "'\\'", "'='", "'%'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\t'", "'\n'", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TERM", "CHARACTER", "OPERATOR", "NON_OPERATOR", 
                      "TAB", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_import_ = 2
    RULE_block = 3
    RULE_header = 4
    RULE_parameters = 5
    RULE_print_ = 6
    RULE_multiline_description = 7
    RULE_description = 8
    RULE_multiline_expression = 9
    RULE_expression = 10
    RULE_definition = 11
    RULE_comment = 12

    ruleNames =  [ "program", "statement", "import_", "block", "header", 
                   "parameters", "print_", "multiline_description", "description", 
                   "multiline_expression", "expression", "definition", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    TERM=13
    CHARACTER=14
    OPERATOR=15
    NON_OPERATOR=16
    TAB=17
    NEWLINE=18
    WHITESPACE=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__0) | (1 << GrammarParser.T__6) | (1 << GrammarParser.T__7) | (1 << GrammarParser.T__8) | (1 << GrammarParser.T__9) | (1 << GrammarParser.T__11) | (1 << GrammarParser.TERM) | (1 << GrammarParser.NON_OPERATOR) | (1 << GrammarParser.NEWLINE))) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(GrammarParser.NEWLINE, 0)

        def import_(self):
            return self.getTypedRuleContext(GrammarParser.Import_Context,0)


        def block(self):
            return self.getTypedRuleContext(GrammarParser.BlockContext,0)


        def print_(self):
            return self.getTypedRuleContext(GrammarParser.Print_Context,0)


        def definition(self):
            return self.getTypedRuleContext(GrammarParser.DefinitionContext,0)


        def comment(self):
            return self.getTypedRuleContext(GrammarParser.CommentContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 32
                self.import_()

            elif la_ == 2:
                self.state = 33
                self.block()

            elif la_ == 3:
                self.state = 34
                self.print_()

            elif la_ == 4:
                self.state = 35
                self.definition()

            elif la_ == 5:
                self.state = 36
                self.comment()


            self.state = 39
            self.match(GrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.TERM)
            else:
                return self.getToken(GrammarParser.TERM, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_import_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_" ):
                listener.enterImport_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_" ):
                listener.exitImport_(self)




    def import_(self):

        localctx = GrammarParser.Import_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(GrammarParser.T__0)
            self.state = 42
            self.match(GrammarParser.TERM)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GrammarParser.T__1:
                self.state = 43
                self.match(GrammarParser.T__1)
                self.state = 44
                self.match(GrammarParser.TERM)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(GrammarParser.HeaderContext,0)


        def NEWLINE(self):
            return self.getToken(GrammarParser.NEWLINE, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = GrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.header()
            self.state = 48
            self.match(GrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(GrammarParser.TERM, 0)

        def multiline_description(self):
            return self.getTypedRuleContext(GrammarParser.Multiline_descriptionContext,0)


        def parameters(self):
            return self.getTypedRuleContext(GrammarParser.ParametersContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = GrammarParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 50
                self.match(GrammarParser.TERM)
                pass

            elif la_ == 2:
                self.state = 51
                self.multiline_description(0)
                pass


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GrammarParser.T__2:
                self.state = 54
                self.match(GrammarParser.T__2)
                self.state = 55
                self.parameters()
                self.state = 56
                self.match(GrammarParser.T__3)


            self.state = 60
            self.match(GrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(GrammarParser.DefinitionContext,0)


        def description(self):
            return self.getTypedRuleContext(GrammarParser.DescriptionContext,0)


        def parameters(self):
            return self.getTypedRuleContext(GrammarParser.ParametersContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = GrammarParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 62
                self.definition()
                pass

            elif la_ == 2:
                self.state = 63
                self.description()
                pass


            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GrammarParser.T__5:
                self.state = 66
                self.match(GrammarParser.T__5)
                self.state = 67
                self.parameters()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiline_description(self):
            return self.getTypedRuleContext(GrammarParser.Multiline_descriptionContext,0)


        def multiline_expression(self):
            return self.getTypedRuleContext(GrammarParser.Multiline_expressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_print_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_" ):
                listener.enterPrint_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_" ):
                listener.exitPrint_(self)




    def print_(self):

        localctx = GrammarParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_)
        self._la = 0 # Token type
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.T__8, GrammarParser.T__9, GrammarParser.TERM, GrammarParser.NON_OPERATOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.multiline_description(0)
                pass
            elif token in [GrammarParser.T__6, GrammarParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                _la = self._input.LA(1)
                if not(_la==GrammarParser.T__6 or _la==GrammarParser.T__7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 72
                self.multiline_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiline_descriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def description(self):
            return self.getTypedRuleContext(GrammarParser.DescriptionContext,0)


        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def multiline_description(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Multiline_descriptionContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Multiline_descriptionContext,i)


        def NEWLINE(self):
            return self.getToken(GrammarParser.NEWLINE, 0)

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.TAB)
            else:
                return self.getToken(GrammarParser.TAB, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_multiline_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiline_description" ):
                listener.enterMultiline_description(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiline_description" ):
                listener.exitMultiline_description(self)



    def multiline_description(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.Multiline_descriptionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_multiline_description, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.T__9, GrammarParser.TERM, GrammarParser.NON_OPERATOR]:
                self.state = 76
                self.description()
                pass
            elif token in [GrammarParser.T__8]:
                self.state = 77
                self.match(GrammarParser.T__8)
                self.state = 78
                self.expression()
                self.state = 79
                self.match(GrammarParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.Multiline_descriptionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiline_description)
                    self.state = 83
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==GrammarParser.NEWLINE:
                        self.state = 84
                        self.match(GrammarParser.NEWLINE)
                        self.state = 86 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 85
                            self.match(GrammarParser.TAB)
                            self.state = 88 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==GrammarParser.TAB):
                                break



                    self.state = 92
                    self.multiline_description(2) 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(GrammarParser.TERM, 0)

        def NON_OPERATOR(self):
            return self.getToken(GrammarParser.NON_OPERATOR, 0)

        def OPERATOR(self):
            return self.getToken(GrammarParser.OPERATOR, 0)

        def description(self):
            return self.getTypedRuleContext(GrammarParser.DescriptionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)




    def description(self):

        localctx = GrammarParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.TERM]:
                self.state = 98
                self.match(GrammarParser.TERM)
                pass
            elif token in [GrammarParser.NON_OPERATOR]:
                self.state = 99
                self.match(GrammarParser.NON_OPERATOR)
                pass
            elif token in [GrammarParser.T__9]:
                self.state = 100
                self.match(GrammarParser.T__9)
                self.state = 101
                self.match(GrammarParser.OPERATOR)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 104
                self.description()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiline_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExpressionContext,i)


        def NEWLINE(self):
            return self.getToken(GrammarParser.NEWLINE, 0)

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.TAB)
            else:
                return self.getToken(GrammarParser.TAB, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_multiline_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiline_expression" ):
                listener.enterMultiline_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiline_expression" ):
                listener.exitMultiline_expression(self)




    def multiline_expression(self):

        localctx = GrammarParser.Multiline_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_multiline_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expression()
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 108
                self.match(GrammarParser.NEWLINE)
                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 109
                    self.match(GrammarParser.TAB)
                    self.state = 112 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==GrammarParser.TAB):
                        break

                self.state = 114
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(GrammarParser.TERM, 0)

        def CHARACTER(self):
            return self.getToken(GrammarParser.CHARACTER, 0)

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = GrammarParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not(_la==GrammarParser.TERM or _la==GrammarParser.CHARACTER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GrammarParser.TERM or _la==GrammarParser.CHARACTER:
                self.state = 118
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(GrammarParser.TERM, 0)

        def block(self):
            return self.getTypedRuleContext(GrammarParser.BlockContext,0)


        def print_(self):
            return self.getTypedRuleContext(GrammarParser.Print_Context,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = GrammarParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(GrammarParser.TERM)
            self.state = 122
            self.match(GrammarParser.T__10)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 123
                self.block()
                pass

            elif la_ == 2:
                self.state = 124
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHARACTER(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.CHARACTER)
            else:
                return self.getToken(GrammarParser.CHARACTER, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = GrammarParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(GrammarParser.T__11)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GrammarParser.CHARACTER:
                self.state = 128
                self.match(GrammarParser.CHARACTER)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.multiline_description_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def multiline_description_sempred(self, localctx:Multiline_descriptionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




